# Agents

./: CLAUDE.md
backend/: .env  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 05b1fa2f2c08_initial_schema.py
backend/api/: websocket.py
backend/config/: database.py  llm.py  settings.py
backend/core/: agent_engine.py  connection_manager.py  llm_client.py
backend/models/: __init__.py  agent.py  message.py  party.py  user.py
backend/routers/: agent_api.py  auth_api.py  deps.py  message_api.py  party_api.py  presence_api.py
backend/schemas/: __init__.py  agent.py  auth.py  message.py  party.py  presence.py  user.py
backend/services/: __init__.py  agent_engine.py  agent_svc.py  auth_svc.py  llm_service.py  message_svc.py  party_svc.py
backend/tests/: conftest.py  test_agent_svc.py  test_auth_api.py  test_auth_svc.py  test_connection_manager.py  test_llm_client.py  test_llm_service.py  test_message_svc.py  test_presence_api.py  test_security.py
backend/utils/: security.py
frontend/: next.config.ts  package-lock.json  package.json  vanta.d.ts  vitest.config.ts  vitest.setup.ts
frontend/app/: page.tsx
frontend/app/agents/: page.tsx
frontend/components/: AgentAvatar.tsx  AgentAvatars.tsx  AgentPanel.tsx  ChatStream.test.tsx  ChatStream.tsx  PartyRoomScene.client.tsx  PartyRoomScene.tsx  PresenceBar.tsx  RoomGeometry.tsx  RoundTable.test.tsx  RoundTable.tsx  RoundTable3D.tsx
frontend/hooks/: usePartyRoom.test.ts  usePartyRoom.ts  useWebSocket.test.ts  useWebSocket.ts
frontend/lib/: api-client.test.ts  api-client.ts  websocket.ts
frontend/stores/: partyStore.test.ts  partyStore.ts
(+4 files in other folders)
