[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.138.0",
    "pydantic-settings>=2.14.2",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.49.0",
    "httpx>=0.28.0",
]
